# snarkops

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  bftdiff.mjs  book.toml  index.html  restructuring.yaml  rustfmt.toml  test-spec.yaml
crates/agent/: Cargo.toml
crates/agent/src/: api.rs  cli.rs  client.rs  db.rs  log.rs  main.rs  net.rs  server.rs  service.rs  state.rs  transfers.rs
crates/agent/src/metrics/: mod.rs  tps.rs
crates/agent/src/reconcile/: address.rs  agent.rs  checkpoint.rs  command.rs  files.rs  mod.rs  process.rs  state.rs  storage.rs
crates/agent/src/rpc/: agent.rs  control.rs
crates/aot/: Cargo.toml
crates/aot/src/: accounts.rs  authorized.rs  cli.rs  credits.rs  genesis.rs  key.rs  lib.rs  main.rs  runner.rs  types.rs
crates/aot/src/auth/: args.rs  auth_deploy.rs  auth_fee.rs  auth_id.rs  auth_program.rs  execute.rs  mod.rs  query.rs
crates/aot/src/checkpoint/: content.rs  header.rs  manager.rs  mod.rs  retention.rs  retention_tests.rs
crates/aot/src/credits/: authorized.rs  mod.rs
crates/aot/src/ledger/: checkpoint.rs  distribute.rs  hash.rs  init.rs  mod.rs  query.rs  truncate.rs  tx.rs  util.rs  view.rs
crates/aot/src/node/: mod.rs
crates/aot/src/program/: args.rs  auth_fee.rs  auth_id.rs  auth_program.rs  authorize.rs  cost.rs  deploy.rs  execute.rs  fee.rs  macros.rs  mod.rs
crates/aot/src/runner/: checkpoint.rs  metrics.rs  mod.rs  status.rs
crates/checkpoint/: Cargo.toml
crates/checkpoint/src/: aleo.rs  checkpoint.rs  content.rs  errors.rs  header.rs  ledger.rs  lib.rs  manager.rs  retention.rs  retention_tests.rs  snarkos.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  events.rs  main.rs
crates/cli/src/commands/: agent.rs  mod.rs  spec.rs
crates/common/: Cargo.toml
crates/common/src/: action_models.rs  api.rs  binaries.rs  clipages.rs  constant.rs  key_source.rs  lib.rs  mangen.rs  node_targets.rs  set.rs
crates/common/src/aot_cmds/: error.rs  mod.rs
crates/common/src/db/: error.rs  mod.rs  tree.rs
crates/common/src/events/: filter.rs  filter_ops.rs  filter_parse.rs  mod.rs  models.rs  test_filter.rs  test_filter_ops.rs  test_filter_parse.rs  traits.rs
crates/common/src/format/: impl_checkpoint.rs  impl_chrono.rs  impl_collections.rs  impl_containers.rs  impl_ints.rs  impl_json.rs  impl_net.rs  impl_strings.rs  impl_tuples.rs  mod.rs  packed_int.rs
crates/common/src/rpc/: codec.rs  error.rs  mod.rs
crates/common/src/schema/: error.rs  mod.rs  nodes.rs
crates/common/src/state/: agent_mode.rs  agent_state.rs  agent_status.rs  authorization.rs  height_request.rs  id.rs  mod.rs  network.rs  node_key.rs  node_state.rs  node_type.rs  port_config.rs  reconcile.rs  snarkos_status.rs  strings.rs  transaction_status.rs
crates/controlplane/: Cargo.toml
crates/controlplane/src/: agent_version.rs  cli.rs  db.rs  error.rs  logging.rs  main.rs
crates/controlplane/src/apply/: error.rs  loaded_storage.rs  mod.rs  storage_helpers.rs
crates/controlplane/src/cannon/: context.rs  error.rs  file.rs  mod.rs  router.rs  source.rs  status.rs  tracker.rs
crates/controlplane/src/env/: cache.rs  error.rs  mod.rs  reconcile.rs  set.rs
crates/controlplane/src/events/: filter.rs  filter_ops.rs  filter_parse.rs  mod.rs  models.rs  stream.rs  test_filter.rs  test_filter_ops.rs  test_filter_parse.rs  test_stream.rs  traits.rs
crates/controlplane/src/persist/: agent.rs  env.rs  mod.rs  node.rs  sink.rs  source.rs  storage.rs
crates/controlplane/src/schema/: cannon.rs  error.rs  mod.rs  nodes.rs  outcomes.rs
crates/controlplane/src/server/: agent_ws.rs  api.rs  content.rs  error.rs  event_ws.rs  mod.rs  prometheus.rs  rpc.rs  websocket.rs
crates/controlplane/src/state/: agent.rs  agent_flags.rs  external_peers.rs  global.rs  mod.rs  reconcile.rs  rpc.rs  snarkos_request.rs  transactions.rs
crates/infra/: Cargo.toml
crates/infra/src/: main.rs
crates/infra/src/schema/: infrastructure.rs  mod.rs  nodes.rs  outcomes.rs  storage.rs  timeline.rs
crates/node/: Cargo.toml
crates/node/src/: accounts.rs  cli.rs  lib.rs  main.rs
crates/node/src/runner/: mod.rs
crates/peer-crawl/: Cargo.toml  index.html
crates/peer-crawl/src/: graph.rs  main.rs
crates/snops/: Cargo.toml
crates/snops-agent/: Cargo.toml
crates/snops-agent/src/: api.rs  cli.rs  db.rs  main.rs  net.rs  reconcile.rs  rpc.rs  server.rs  state.rs  transfers.rs
crates/snops-agent/src/metrics/: mod.rs  tps.rs
crates/snops-agent/src/rpc/: agent.rs  control.rs  mod.rs
crates/snops-cli/: CLI_USAGE.md  Cargo.toml  build.rs
crates/snops-cli/src/: cli.rs  main.rs
crates/snops-cli/src/commands/: agent.rs  env.rs  list.rs  mangen.rs  mod.rs  outcomes.rs  timeline.rs
crates/snops-common/: Cargo.toml
crates/snops-common/src/: action_models.rs  api.rs  binaries.rs  clipages.rs  constant.rs  key_source.rs  lib.rs  mangen.rs  node_targets.rs  state.rs  util.rs
crates/snops-common/src/aot_cmds/: authorization.rs  error.rs  mod.rs
crates/snops-common/src/db/: mod.rs
crates/snops-common/src/format/: base_impl.rs  impl_checkpoint.rs  impl_collections.rs  impl_containers.rs  impl_ints.rs  impl_json.rs  impl_net.rs  impl_nums.rs  impl_strings.rs  impl_tuples.rs  mod.rs  packed_int.rs
crates/snops-common/src/rpc/: agent.rs  control.rs  error.rs  mod.rs
crates/snops-common/src/state/: agent_mode.rs  agent_state.rs  agent_status.rs  height_request.rs  id.rs  mod.rs  network.rs  node_key.rs  node_state.rs  node_type.rs  port_config.rs  snarkos_status.rs  strings.rs
crates/snops/src/: cli.rs  db.rs  error.rs  logging.rs  main.rs  state.rs
crates/snops/src/cannon/: authorized.rs  context.rs  error.rs  file.rs  mod.rs  persist.rs  router.rs  sink.rs  source.rs  status.rs  tracker.rs
crates/snops/src/db/: document.rs  error.rs  mod.rs  tree.rs
crates/snot/: Cargo.toml
crates/snot-agent/: Cargo.toml
crates/snot-agent/src/: agent.rs  api.rs  cli.rs  main.rs  rpc.rs  state.rs
crates/snot/src/: cli.rs  error.rs  logging.rs  main.rs  prometheus.rs  server.rs  state.rs  storage.rs  testing.rs
devops/: README.md  (+5 more)
(+266 files in other folders)
