[workspace]
members = [
	"crates/aot",
	"crates/snops",
	"crates/snops-agent",
	"crates/snops-cli",
	"crates/snops-common",
	"crates/checkpoint",
]
resolver = "2"

[profile.dev]
codegen-units = 512
opt-level = 1

# This one optimizes performance
[profile.release]
codegen-units = 1
incremental = true
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

# For testing cargo bloat
[profile.release-no-strip]
inherits = "release"
strip = false

# This one optimizes binary size
[profile.release-small]
inherits = "release"
opt-level = "z"

[profile.release-big]
inherits = "release"
codegen-units = 16
incremental = true
lto = "thin"
opt-level = 1
panic = "unwind"

[workspace.dependencies]
aleo-std = "=0.1.24"
axum = { version = "0.7", default-features = false }
anyhow = { version = "1", features = ["backtrace"] }
bimap = "0.6"
bincode = "1.3"
bytes = "1.6"
checkpoint = { path = "./crates/checkpoint" }
chrono = { version = "0.4", features = ["now"], default-features = false }
clap = { version = "4.5", features = ["derive"] }
clap_complete = { version = "4.5" }
colored = "2"
crossterm = { version = "0.27", default-features = false }
duration-str = { version = "0.7", default-features = false }
external-ip = { version = "5.0", default-features = false }
fixedbitset = { version = "0.5", default-features = false }
futures = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
hmac = { version = "0.12", default-features = false }
glob = "0.3.1"
http = "1.1"
httpdate = "1.0"
indexmap = { version = "2.2", default-features = false, features = ["serde"] }
indicatif = { version = "0.17", default-features = false, features = ["rayon"] }
jwt = "0.16"
lazy_static = "1.4"
lasso = { version = "0.7", features = ["multi-threaded"] }
local-ip-address = "0.6"
metrics-exporter-prometheus = "0.14"
nix = { version = "0.28", features = ["process"] }
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
rayon = "1"
regex = { version = "1.10", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
	"default-tls",
	"http2",
] }
rocksdb = { version = "0.21", default-features = false }
serde = { version = "1", default-features = false, features = [
	"alloc",
	"derive",
] }
serde-clap-deserialize = "0.1"
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde_yaml = { version = "0.0", package = "serde_yml" }
sha2 = { version = "0.10", default-features = false }
simple_moving_average = "1.0"
sled = "0.34"
snarkos-account = { path = "../snarkos/account" }
snarkos-node = { path = "../snarkos/node" }
snarkvm = { path = "../snarkvm", default-features = false }
snops-common = { path = "./crates/snops-common" }
strum_macros = { version = "0.26", default-features = false }
surrealdb = { version = "1.3", default-features = false }
tarpc = { version = "0.34", features = ["tokio1", "serde1"] }
thiserror = "1.0"
tokio = "1"
tokio-tungstenite = "0.21"
tower = { version = "0.4", default-features = false }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-appender = "0.2"
tracing-flame = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = [
	"ansi",
	"env-filter",
	"smallvec",
	"std",
] }
url = "2.5"
uuid = { version = "1.8", default-features = false }
wildmatch = "2.3"

[patch."https://github.com/AleoHQ/snarkVM.git"]
snarkvm = { path = "../snarkvm", default-features = false }
