[workspace]
members = [
	"crates/agent",
	"crates/aot",
	"crates/checkpoint",
	"crates/cli",
	"crates/common",
	"crates/controlplane",
	"crates/xtask",
]
resolver = "2"

[profile.dev]
codegen-units = 512
opt-level = 1

# This one optimizes performance
[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "unwind"

# This one optimizes binary size
[profile.release-small]
inherits = "release"
opt-level = "z"
strip = true

[profile.release-big]
inherits = "release"
codegen-units = 16
lto = "thin"
opt-level = 1

[workspace.dependencies]
aleo-std = "0.1.24"
axum = { version = "0.7", default-features = false }
# uncomment to enable #[debug_handler] for axum :^)
# axum = { version = "0.7", features = ["macros"], default-features = false }
anyhow = { version = "1", features = ["backtrace"] }
# can't update this cause snarkos/vm
bech32 = "0.9"
bimap = "0.6"
bincode = "1.3"
bytes = "1.7"
chrono = { version = "0.4", features = ["now"], default-features = false }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = { version = "4.5" }
clap_mangen = { version = "0.2" }
clap-markdown = "0.1"
clap-stdin = "0.5"
colored = "2"
crossterm = { version = "0.28", default-features = false }
dashmap = "6.1"
fixedbitset = { version = "0.5", default-features = false }
futures = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
hmac = { version = "0.12", default-features = false }
glob = "0.3.1"
http = { version = "1.1", default-features = false }
httpdate = "1.0"
indexmap = { version = "2.6", default-features = false }
jwt = "0.16"
lazysort = "0.2"
lazy_static = "1.5"
lasso = { version = "0.7", features = ["multi-threaded"] }
local-ip-address = "0.6"
metrics-exporter-prometheus = { version = "0.13", default-features = false }
nix = { version = "0.29", features = ["process"] }
num_cpus = "1.16"
paste = "1.0"
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
rayon = "1"
regex = { version = "1.10", features = ["unicode"], default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
	"default-tls",
	"http2",
] }
# Can't update this cause snarkos/vm
rocksdb = { version = "0.21", default-features = false }
rustls = { version = "0.23.15", features = ["ring"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1", default-features = false, features = [
	"alloc",
	"derive",
] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde_yaml = { version = "0.0", package = "serde_yml" }
sha2 = { version = "0.10", default-features = false }
simple_moving_average = "1.0"
sled = "0.34"
strum_macros = { version = "0.26", default-features = false }
tarpc = { version = "0.34", features = ["tokio1", "serde1"] }
thiserror = "1.0"
tokio = { version = "1.41", default-features = false }
tokio-tungstenite = { version = "0.24", features = [
	"rustls-tls-native-roots",
	"rustls-tls-webpki-roots",
] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-appender = "0.2"
tracing-flame = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = [
	"ansi",
	"env-filter",
	"smallvec",
	"std",
] }
url = "2.5"
uuid = { version = "1.10", default-features = false }
wildmatch = "2.4"

snops-checkpoint = { path = "./crates/checkpoint" }
snops-common = { path = "./crates/common" }

# snops-checkpoint = { version = "0.1" }
# snops-common = { version = "0.1" }

# snarkos-account = { path = "../snarkos/account" }
# snarkos-node = { path = "../snarkos/node" }
# snarkvm = { path = "../snarkvm", features = ["rocks"] }
# snarkos-node-metrics = { path = "../snarkos/node/metrics" }

# snarkos-account = { version = "3.0" }
# snarkos-node = { version = "3.0" }
# snarkos-node-metrics = { version = "3.0" }
# snarkvm = { version = "1.0", features = ["rocks"] }

snarkos-account = { git = "https://github.com/AleoNet/snarkOS", rev = "ba41197" }
snarkos-node = { git = "https://github.com/AleoNet/snarkOS", rev = "ba41197" }
snarkos-node-metrics = { git = "https://github.com/AleoNet/snarkOS", rev = "ba41197" }
snarkvm = { git = "https://github.com/AleoNet/snarkVM", rev = "1de86e7", default-features = false, features = [
	"rocks",
] }
