[package]
name = "snops-agent"
version = "0.2.0"

description = "A snarkops agent for communicating with snarkos nodes and the control plane"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
docpages = ["clipages", "mangen"]
clipages = ["snops-common/clipages"]
mangen = ["snops-common/mangen"]

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["http2", "json", "tokio", "ws"] }
chrono.workspace = true
clap.workspace = true
dashmap.workspace = true
futures.workspace = true
futures-util.workspace = true
http.workspace = true
httpdate.workspace = true
indexmap.workspace = true
local-ip-address.workspace = true
nix = { workspace = true, features = ["signal"] }
reqwest = { workspace = true, features = ["json", "stream"] }
rustls.workspace = true
serde_json.workspace = true
sha2.workspace = true
simple_moving_average.workspace = true
sled.workspace = true
snops-checkpoint.workspace = true
snops-common = { workspace = true, features = ["aot_cmds"] }
tarpc.workspace = true
tokio = { workspace = true, features = [
	"macros",
	"process",
	"signal",
	"rt-multi-thread",
] }
tokio-tungstenite.workspace = true
tracing-appender.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
