[package]
edition = "2021"
name = "snarkos-aot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["node"]
flame = ["tracing-flame"]
node = [
  "snarkos-node",
  "crossterm",
  "snarkos-node/metrics",
  "metrics-exporter-prometheus",
  "num_cpus",
  "rayon",
]

[dependencies]
aleo-std.workspace = true
anyhow.workspace = true
axum.workspace = true
bincode.workspace = true
checkpoint = { workspace = true, features = ["write"] }
clap.workspace = true
colored.workspace = true
crossterm = { workspace = true, optional = true }
indexmap.workspace = true
indicatif.workspace = true
lazy_static.workspace = true
metrics-exporter-prometheus = { workspace = true, optional = true }
nix.workspace = true
num_cpus = { optional = true, workspace = true }
rayon = { workspace = true, optional = true }
rand.workspace = true
rand_chacha.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
serde-clap-deserialize.workspace = true
serde.workspace = true
serde_json.workspace = true
snarkos-account.workspace = true
snarkos-node = { workspace = true, optional = true }
snarkvm.workspace = true
snops-common.workspace = true
tokio.workspace = true
tracing-flame = { workspace = true, optional = true }
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
rocksdb = { workspace = true, features = ["lz4"] }

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
tikv-jemallocator = "0.5"

[dependencies.metrics]
package = "snarkos-node-metrics"
path = "../../../snarkos/node/metrics"
