[package]
edition = "2021"
name = "checkpoint"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
write = ["snarkvm", "snarkos-node", "aleo-std", "anyhow"]
serde = ["dep:serde"]

[dependencies]
aleo-std = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
chrono.workspace = true
glob.workspace = true
rayon.workspace = true
serde = { workspace = true, optional = true }
snarkvm = { workspace = true, optional = true }
snarkos-node = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true
