[package]

name = "snops-checkpoint"
version = "0.1.0"
description = "Ledger checkpointing for SnarkOS"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
write = ["snarkvm", "snarkos-node", "aleo-std", "anyhow"]
serde = ["dep:serde"]

[dependencies]
aleo-std = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
chrono.workspace = true
glob.workspace = true
lazysort.workspace = true
rayon.workspace = true
serde = { workspace = true, optional = true }
snarkvm = { workspace = true, optional = true }
snarkos-node = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true
