[package]
name = "snops-cli"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "CLI for interacting with snarkops control plane API"

[features]
default = []
docpages = ["clipages", "mangen"]
clipages = ["snops-common/clipages"]
mangen = ["snops-common/mangen"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap-stdin.workspace = true
futures-util.workspace = true
http.workspace = true
indexmap = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["json"] }
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
snops-common = { workspace = true, features = ["aot_cmds", "schema"] }
tokio = { workspace = true, features = ["macros", "signal", "rt-multi-thread"] }
tokio-tungstenite.workspace = true
url = { workspace = true, features = ["serde"] }
