[package]
name = "snops-cli"
version = "0.1.0"

description = "CLI for interacting with snarkops control plane API"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
docpages = ["clipages", "mangen"]
clipages = ["snops-common/clipages"]
mangen = ["snops-common/mangen"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap-stdin.workspace = true
futures-util.workspace = true
http.workspace = true
reqwest = { workspace = true, features = ["json"] }
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
snops-common = { workspace = true, features = ["aot_cmds"] }
tokio = { workspace = true, features = ["macros", "signal", "rt-multi-thread"] }
tokio-tungstenite.workspace = true
urlencoding = "2.1.3"
