[package]
name = "snops-common"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Common types and utilities for snops"

[features]
default = []
aot_cmds = []
clipages = ["anyhow", "clap-markdown"]
mangen = ["anyhow", "clap_mangen"]

[dependencies]
anyhow = { workspace = true, optional = true }
bytes.workspace = true
chrono = { workspace = true, features = ["serde"] }
clap.workspace = true
clap_mangen = { workspace = true, optional = true }
clap-markdown = { workspace = true, optional = true }
futures.workspace = true
http = { workspace = true, features = ["std"] }
indexmap = { workspace = true, features = ["std", "serde"] }
lasso.workspace = true
lazy_static.workspace = true
paste.workspace = true
rand.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sled.workspace = true
snops-checkpoint = { workspace = true, features = ["serde"] }
strum_macros.workspace = true
tarpc.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process"] }
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
wildmatch.workspace = true

[dev-dependencies]
indexmap = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["io-util", "process"] }
