[package]
name = "snops"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "The snarkops control plane responsible for managing environments and agents"

[features]
default = []
docpages = ["clipages", "mangen"]
clipages = ["snops-common/clipages"]
mangen = ["snops-common/mangen"]

[dependencies]
axum = { workspace = true, features = [
	"http2",
	"json",
	"query",
	"tokio",
	"ws",
	"macros",
] }
bimap = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["env"] }
dashmap = { workspace = true, features = ["serde"] }
fixedbitset.workspace = true
futures-util.workspace = true
hmac.workspace = true
http.workspace = true
indexmap = { workspace = true, features = ["serde"] }
jwt.workspace = true
lazysort.workspace = true
lazy_static.workspace = true
prometheus-http-query = "0.8"
# promql-parser = "0.4"
rand.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
sled.workspace = true
snops-checkpoint.workspace = true
snops-common = { workspace = true, features = ["aot_cmds", "schema"] }
strum_macros.workspace = true
tarpc.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tower.workspace = true
tower-http.workspace = true
tracing-appender.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url = { workspace = true }
uuid = { workspace = true, features = ["fast-rng", "v4"] }
