[package]
name = "snarkos-test-infra"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
duration-str = { version = "0.7", default-features = false }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
snarkos-aot = { path = "../aot" }
