[package]
name = "snops-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bincode.workspace = true
clap.workspace = true
external-ip.workspace = true
futures.workspace = true
futures-util.workspace = true
http.workspace = true
httpdate = { workspace = true }
local-ip-address = { workspace = true }
nix = { workspace = true, features = ["signal"] }
reqwest = { workspace = true, features = ["stream", "json"] }
snops-common = { path = "../snops-common" }
tarpc.workspace = true
tokio.workspace = true
tokio-tungstenite = { workspace = true }
tracing-appender.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
simple_moving_average = { workspace = true }
