[package]
name = "snops-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
checkpoint.workspace = true
clap.workspace = true
futures.workspace = true
futures-util.workspace = true
http.workspace = true
httpdate.workspace = true
local-ip-address.workspace = true
nix = { workspace = true, features = ["signal"] }
reqwest = { workspace = true, features = ["json", "stream"] }
simple_moving_average.workspace = true
snops-common = { path = "../snops-common" }
tarpc.workspace = true
tokio = { workspace = true, features = [
  "macros",
  "process",
  "signal",
  "rt-multi-thread",
] }
tokio-tungstenite.workspace = true
tracing-appender.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
