[package]
name = "snops-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
serde_json.workspace = true
snops-common.workspace = true

[build-dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap-markdown = "0.1"
clap_mangen = "0.2"
reqwest = { workspace = true, features = ["blocking", "json"] }
serde_json.workspace = true
snops-common.workspace = true
