[package]
name = "snops-cli"
version = "0.1.0"
edition = "2021"

[features]
default = []
mangen = ["clap_mangen"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_mangen = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
serde_json.workspace = true
snops-common.workspace = true

[build-dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_mangen = { workspace = true, optional = true }
clap-markdown.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
serde_json.workspace = true
snops-common.workspace = true
