[package]
name = "snops-common"
version = "0.1.0"
edition = "2021"

[dependencies]
checkpoint = { workspace = true, features = ["serde"] }
clap.workspace = true
futures.workspace = true
http.workspace = true
lasso.workspace = true
lazy_static.workspace = true
regex.workspace = true
serde.workspace = true
strum_macros.workspace = true
tarpc.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
