[package]
name = "snops"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = [
	"http2",
	"json",
	"query",
	"tokio",
	"ws",
] }
bimap = { workspace = true, features = ["serde"] }
bincode.workspace = true
bytes.workspace = true
checkpoint.workspace = true
chrono = { workspace = true, features = ["serde"] }
clap.workspace = true
dashmap = { workspace = true, features = ["serde"] }
duration-str.workspace = true
external-ip.workspace = true
fixedbitset.workspace = true
futures-util.workspace = true
hmac.workspace = true
http.workspace = true
indexmap = { workspace = true, features = ["serde"] }
jwt.workspace = true
lazy_static.workspace = true
prometheus-http-query = "0.8"
promql-parser = "0.3"
rand.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
sled.workspace = true
snops-common = { path = "../snops-common" }
strum_macros.workspace = true
tarpc.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing-appender.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["fast-rng", "v4"] }
wildmatch.workspace = true
